--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aircandi.ting"
+    package="com.aircandi.candiblast"
     android:installLocation="auto"
     android:versionCode="83"
-    android:versionName="0.9.39.dev" >
+    android:versionName="0.9.39" >
 
     <supports-screens
         android:anyDensity="true"
@@ -22,11 +22,11 @@
         android:required="true" />
 
     <permission
-        android:name="com.aircandi.ting.permission.MAPS_RECEIVE"
+        android:name="com.aircandi.candiblast.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <permission
-        android:name="com.aircandi.ting.permission.C2D_MESSAGE"
+        android:name="com.aircandi.candiblast.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -37,7 +37,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.aircandi.ting.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.aircandi.candiblast.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <!-- To support GCM -->
@@ -46,7 +46,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <uses-permission android:name="com.aircandi.ting.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.aircandi.candiblast.permission.C2D_MESSAGE" />
 
     <!-- Needed to trigger a wifi scan -->
 
