--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aircandi.barbados"
     android:installLocation="auto"
-    android:versionCode="84"
-    android:versionName="0.9.40" >
+    android:versionCode="85"
+    android:versionName="0.9.41" >
 
     <supports-screens
         android:anyDensity="true"
@@ -76,14 +76,14 @@
             android:enabled="true"
             android:label="@string/name_app" />
 
-        <service android:name="com.aircandi.components.GcmIntentService" />
+        <service android:name="com.aircandi.barbados.components.GcmIntentService" />
 
         <!-- Receivers -->
 
         <receiver android:name="com.aircandi.components.LocationChangedReceiver" />
 
         <receiver
-            android:name="com.aircandi.components.GcmBroadcastReceiver"
+            android:name="com.aircandi.barbados.components.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
@@ -95,16 +95,23 @@
         <!-- Activities -->
 
         <activity
-            android:name="com.aircandi.ui.SplashForm"
+            android:name="com.aircandi.ui.SplashFormExtended"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/aircandi_theme_midnight_notitlebar"
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+		    <intent-filter>
+		        <action android:name="com.aircandi.action.CANDIGRAM_VIEW"/>
+		        <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>        
+		    <intent-filter>
+		        <action android:name="com.aircandi.action.CANDIGRAM_INSERT"/>
+		        <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>        
+		    </activity>
         <activity
             android:name="com.aircandi.ui.AircandiForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -123,7 +130,8 @@
             android:name="com.aircandi.ui.CandigramForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/name_app"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden" >
+    	</activity>
         <activity
             android:name="com.aircandi.ui.MapForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -239,6 +247,11 @@
             android:name="com.aircandi.ui.user.RegisterEdit"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/form_title_signup"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name="com.aircandi.ui.user.ResetEdit"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/form_title_reset"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.aircandi.ui.user.PasswordEdit"
