--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aircandi.barbados"
     android:installLocation="auto"
-    android:versionCode="86"
-    android:versionName="0.9.42" >
+    android:versionCode="87"
+    android:versionName="0.9.43" >
 
     <supports-screens
         android:anyDensity="true"
@@ -95,7 +95,7 @@
         <!-- Activities -->
 
         <activity
-            android:name="com.aircandi.ui.SplashFormExtended"
+            android:name="com.aircandi.ui.SplashForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:theme="@style/aircandi_theme_midnight_notitlebar"
             android:windowSoftInputMode="stateHidden" >
@@ -103,15 +103,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-		    <intent-filter>
-		        <action android:name="com.aircandi.action.CANDIGRAM_VIEW"/>
-		        <category android:name="android.intent.category.DEFAULT"/>
-		    </intent-filter>        
-		    <intent-filter>
-		        <action android:name="com.aircandi.action.CANDIGRAM_INSERT"/>
-		        <category android:name="android.intent.category.DEFAULT"/>
-		    </intent-filter>        
-		    </activity>
+		</activity>
         <activity
             android:name="com.aircandi.ui.AircandiForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -131,7 +123,11 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/name_app"
             android:windowSoftInputMode="stateHidden" >
-    	</activity>
+		    <intent-filter>
+		        <action android:name="com.aircandi.action.CANDIGRAM_VIEW"/>
+		        <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>        
+        	</activity>
         <activity
             android:name="com.aircandi.ui.MapForm"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -185,7 +181,12 @@
             android:name="com.aircandi.ui.edit.CandigramWizard"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/name_app"
-            android:windowSoftInputMode="stateHidden" />
+            android:windowSoftInputMode="stateHidden" >
+		    <intent-filter>
+		        <action android:name="com.aircandi.action.CANDIGRAM_INSERT"/>
+		        <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>        
+		</activity>
         <activity
             android:name="com.aircandi.ui.edit.TuningEdit"
             android:configChanges="orientation|keyboardHidden|screenSize"
